--- a/docs/projects/2019.md
+++ b/docs/projects/2019.md
@@ -2,7 +2,7 @@
 layout: page
 title: 2019
 has_children: true
-parent: Side Projects
+parent: Projects
 permalink: /projects/2019
 image: /assets/img/2019.svg
 image_alt: 2019
