--- a/docs/projects/2020.md
+++ b/docs/projects/2020.md
@@ -2,7 +2,7 @@
 layout: page
 title: 2020
 has_children: true
-parent: Side Projects
+parent: Projects
 permalink: /projects/2020
 nav_order: 10
 image: /assets/img/2020.svg
