--- a/docs/Challenges/2019.md
+++ b/docs/Challenges/2019.md
@@ -2,8 +2,8 @@
 layout: page
 title: 2019
 has_children: true
-parent: Projects
-permalink: /projects/2019
+parent: Challenges
+permalink: /challenges/2019
 image: /assets/img/2019.svg
 image_alt: 2019
 nav_order: 11
