--- a/docs/Challenges/2020.md
+++ b/docs/Challenges/2020.md
@@ -2,8 +2,8 @@
 layout: page
 title: 2020
 has_children: true
-parent: Projects
-permalink: /projects/2020
+parent: Challenges
+permalink: /challenges/2020
 nav_order: 10
 image: /assets/img/2020.svg
 image_alt: 2020
